Eduprov : 16-08-2021 : Added Schema org and keyword

--- a/dott-course.html
+++ b/dott-course.html
@@ -2,94 +2,109 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Diploma in Operation Theatre Technology (DOTT), Eligibility | Eduprov </title>
-  <meta name="description"
-    content="Operation Theatre Technology student learn to assist medical professionals in operation theatre, ICU. to know on admission, colleges, eligibility visit EDUPROV">
-  <meta name="keywords" content="">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/dott-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Diploma in Operation Theatre Technology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/dott-course.html"
+      },
+      "headline": "Diploma in Operation Theatre Technology Admission Guidance in Bangalore",
+      "description": "Diploma in Operation Theatre Technology is a wonderful course that students who wish to be in
+      the Health Care Services and Medical Industry can take up. This is a Diploma Course that can be
+      taken up by students after the completion of either 12th or PUC",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug",
+        "url": "https://github.com/thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-16",
+      "dateModified": "2021-08-16"
+    }
+    </script>
+  <meta name="description" content="Diploma in Operation Theatre Technology is a wonderful course that students who wish to be in
+  the Health Care Services and Medical Industry can take up. This is a Diploma Course that can be
+  taken up by students after the completion of either 12th or PUC">
+  <meta name="keywords" content=" operation theatre technology,bsc operation theatre technology,diploma in operation theatre technology,diploma in operation theatre,operation theatre and anesthesia technology,bsc operation theatre & anaesthesia technology,diploma in ot technician,operation theatre course,bsc anesthesia and operation theatre technology,operation theatre technician course,bsc ott,bsc ot and anesthesia technology,anesthesia and operation theatre technology,diploma in operation theatre technology colleges,bachelor of operation theatre technology,diploma in operation theatre technology syllabus,bsc ot technician,operation theatre technology course,bsc anaesthesia and operation theatre technology,bsc operation theatre and anaesthesia technology,diploma in operation theatre and anesthesia technology,diploma in ot,ot technician certificate,operation theatre technician colleges,bsc in operation theatre and anesthesia technology,bsc in ot technician,anaesthesia and operation theatre technology,bsc ott course duration,bsc in ott,diploma in operation theatre technology salary,bsc operation theatre,diploma in theatre technology,bachelor in operation theatre technology,diploma in ot technician syllabus,m sc operation theatre and anaesthesia technology,diploma in operation theatre and anesthesia technology syllabus,diploma in operation theatre technician,diploma ot technician course,diploma in operation theatre technology course details,diploma ot technician,diploma in ott,operation theatre & anaesthesia technology,bsc ot and anesthesia,paramedical ot technician,bachelor of ot technician,courses after bsc operation theatre technology,operation theatre and anesthesia technology course,diploma in operation theatre technology eligibility,bsc ot technology,bsc anesthesia and operation technology,diploma in ot technician course,diploma in operation theatre and anesthesia technology salary,ot operation theatre course,diploma in operating theatre nursing science,diploma in operation theatre technician question paper,diploma in ot technician eligibility,bsc ott subjects,bsc ott course,colleges offering diploma in operation theatre technology,diploma in ot technician fees,bachelor in ot technician,diploma in operation theatre assistant,operation theatre technology subjects,diploma in ot and anesthesia,bsc in operation theatre,about operation theatre technology,diploma in ot technician after 10th,pg diploma in operation theatre technology,certificate in ot technician,ot technician subjects,diploma in operation theatre technology after 10th,bachelor in operation theater technology,bsc operation theatre technology subjects,ot technician diploma course,operation theatre technology diploma,ot technician diploma fees,bachelor of science in operation theatre technology,bsc operation technology,diploma of operation theater,bsc operation theatre & anaesthesia technology subjects,operative theatre technology,operation theatre technology course duration,bss diploma in operation theatre technology,diploma in operation theatre technology admission,bsc in operation theatre and anaesthesia technology,
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content=" Diploma in Operation Theatre Technology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/dott-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Diploma in Operation Theatre Technology is a wonderful course that students who wish to be in
+    the Health Care Services and Medical Industry can take up. This is a Diploma Course that can be
+    taken up by students after the completion of either 12th or PUC" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content=" Diploma in Operation Theatre Technology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Diploma in Operation Theatre Technology is a wonderful course that students who wish to be in
+    the Health Care Services and Medical Industry can take up. This is a Diploma Course that can be
+    taken up by students after the completion of either 12th or PUC" />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>
-            Diploma in Operation Theatre Technology (DOTT)</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Diploma in Operation Theatre Technology</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -112,7 +127,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Eligibility
         </h2>
@@ -137,7 +152,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           List of colleges in Karnataka
         </h2>
@@ -198,7 +213,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Scope
         </h2>
