--- a/engineering-course-blogs.html
+++ b/engineering-course-blogs.html
@@ -41,7 +41,7 @@
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Engineering Course Admission Guidance in Bangalore" />
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="https://eduprov.com/engineering-course-blogs.html" />
   <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
     content="Engineering is a stream of education that involves the application of Science, Technology and Mathematics to innovate, design, develop and maintain " />
