--- a/exams-blogs.html
+++ b/exams-blogs.html
@@ -44,7 +44,7 @@
   <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
     content="Exam Information Admission Guidance in Bangalore at eduprov" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="#" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@eduprov" />
   <meta name="twitter:title" content="Exam Information Admission Guidance in Bangalore" />
