--- a/diploma-in-x-ray-course.html
+++ b/diploma-in-x-ray-course.html
@@ -2,94 +2,109 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Diploma in X-Ray Technology Admission, Colleges | Eduprov</title>
-  <meta name="description"
-    content="X-Ray Technology elucidate on science of image production using MRI, CT Scans, X Rays etc. Know about college admission, counseling, career, scope visit EDUPROV">
-  <meta name="keywords" content="">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/diploma-in-x-ray-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Diploma in X-Ray Technology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/diploma-in-x-ray-course.html"
+      },
+      "headline": "Diploma in X-Ray Technology Admission Guidance in Bangalore",
+      "description": "A Radiology Technician or Radiology assistant is a paramedic technician who helps the patients
+      and doctors in understanding and interpreting science of image production using MRI, CT Scans,
+      X Rays, etc.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug",
+        "url": "https://github.com/thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-16",
+      "dateModified": "2021-08-16"
+    }
+    </script>
+  <meta name="description" content="A Radiology Technician or Radiology assistant is a paramedic technician who helps the patients
+  and doctors in understanding and interpreting science of image production using MRI, CT Scans,
+  X Rays, etc.">
+  <meta name="keywords" content=" diploma in x ray technology,diploma in x ray,diploma in radiography,diploma in x ray technician,x ray technician diploma salary,diploma in x ray technology after 10th,diploma in radiography requirements,diploma in radiology technician,x ray diploma course,diploma in x ray technology colleges,diploma in radiography and imaging technology,diploma in x ray technology after 12th,diploma in radiography technology,radiography diploma course,diploma x ray technician course,diploma in radiography salary,diploma in medical radiography technology,diploma in x ray technician syllabus,diploma in medical radiography,diploma in medical radiology technology,diploma in x ray technology salary,diploma in x ray technology course,diploma in x ray technician salary,diploma in x ray and ecg technology,diploma in x ray technology syllabus,x ray technician diploma course eligibility,diploma in radiography diagnostic,diploma in x ray technician eligibility,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Diploma in X-Ray Technology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/diploma-in-x-ray-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="A Radiology Technician or Radiology assistant is a paramedic technician who helps the patients
+    and doctors in understanding and interpreting science of image production using MRI, CT Scans,
+    X Rays, etc." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Diploma in X-Ray Technology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="A Radiology Technician or Radiology assistant is a paramedic technician who helps the patients
+    and doctors in understanding and interpreting science of image production using MRI, CT Scans,
+    X Rays, etc." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      background-position: center center;
-      background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>
-            Diploma in X-Ray Technology</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Diploma in X-Ray Technology</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -109,7 +124,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Eligibility
         </h2>
@@ -140,7 +155,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
 
           Scope
         </h2>
