Eduprov : 17-08-2021 : Added Schema org and keywords

--- a/godwin-public-school.html
+++ b/godwin-public-school.html
@@ -16,6 +16,7 @@
         "@id": "https://eduprov.com/godwin-public-school.html"
       },
       "headline": "Godwin Public School Admission Guidance in Bangalore",
+      "description": "Godwin Public School Affiliated to Karnataka Secondary Education Board with code AN0618 and Godwin High School is a examination center for SSLC examination center with center code AN214 permanently recognized by government of Karnataka.",
       "image": "https://eduprov.com/images/favicon.png",  
       "author": {
         "@type": "Person",
@@ -43,13 +44,13 @@
   <meta property="og:url" content="https://eduprov.com/godwin-public-school.html" />
   <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
-    content="School is a happy secure environment, which fosters a real enthusiasm for life and learning. Every person involved in our school is entitled to respect, security and consideration, and is valued for the contribution they make to the life of the school." />
+    content="Godwin Public School Affiliated to Karnataka Secondary Education Board with code AN0618 and Godwin High School is a examination center for SSLC examination center with center code AN214 permanently recognized by government of Karnataka." />
   <meta property="og:image" content="#" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@eduprov" />
   <meta name="twitter:title" content="Godwin Public School Admission Guidance in Bangalore" />
   <meta name="twitter:description"
-    content="School is a happy secure environment, which fosters a real enthusiasm for life and learning. Every person involved in our school is entitled to respect, security and consideration, and is valued for the contribution they make to the life of the school." />
+    content="Godwin Public School Affiliated to Karnataka Secondary Education Board with code AN0618 and Godwin High School is a examination center for SSLC examination center with center code AN214 permanently recognized by government of Karnataka." />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
