Eduprov : 23-08-2021 : Fix Image size in homepage and Add Schema org in law course blogs

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
         </div>
         <div class="col-md-6">
-          <img src="./images/book-lovers.svg" className="img-fluid"  alt="Student-icon"  title="Kid with a book in his hand"/>
+          <img src="./images/book-lovers.svg" className="img-fluid"  alt="Student-icon"  title="Kid with a book in his hand" height="430px" width="430px" style="margin-left: 20px;"/>
         </div>
       </div>
       <div class="row" data-aos="fade-up">
@@ -536,10 +536,7 @@
   </section>
 
 
-  <!-- <a  href="https://api.whatsapp.com/send?phone=add-ur-number-here-without-plus-symbol-and-space" class="float" target="_blank" >
-    <i class="fab fa-whatsapp my-float" ></i>
-    </a>
-      -->
+  
 
   <section class="section-services">
     <div class="container">
