Eduprov : 23-08-2021 : Added Schema org and keywords

--- a/law-course-blogs.html
+++ b/law-course-blogs.html
@@ -81,18 +81,21 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
     <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
 
-  
-<div class="container text-white">
-    <div class="row">
-      <div class="col-md-8 mt-5 pt-3">
-        <h1 class="text-dark">Law Course</h1>
+  <div class="banner">
+
+    <div class="container text-white">
+      <div class="row">
+        <div class="col-md-8 mt-5 pt-5">
+          <h1 class="text-white">Law Course</h1>
+        </div>
       </div>
     </div>
   </div>
