--- a/mba-course-blogs.html
+++ b/mba-course-blogs.html
@@ -43,13 +43,13 @@
 <meta property="og:site_name" content="Eduprov" />
 <meta property="og:description"
   content="MBA is an internationally accredited post-graduate degree for developing business and management skills amongst future business leaders and entrepreneurs." />
-<meta property="og:image" content="" />
+<meta property="og:image" content="#" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@eduprov" />
 <meta name="twitter:title" content="MBA Course Admission Guidance in Bangalore - Eduprov" />
 <meta name="twitter:description"
   content="MBA is an internationally accredited post-graduate degree for developing business and management skills amongst future business leaders and entrepreneurs." />
-<meta name="twitter:image" content="" />
+<meta name="twitter:image" content="#" />
 <meta name="twitter:url" content="https://twitter.com/eduprov" />
 <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
 <link rel="apple-touch-icon" href="/images/favicon.png">
