--- a/para-medical-course-blogs.html
+++ b/para-medical-course-blogs.html
@@ -2,21 +2,72 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paramedical Course Information Scope Exam Details | Eduprov</title>
-  <meta name="description" content=" The Paramedic course involves emergency medical services required in the pre-hospital environment." />
-  <meta name="keywords" content="" />
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/para-medical-course-blogs.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Para-Medical Course Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/oxford-college-of-science.html"
+      },
+      "headline": "Para-Medical Course Admission Guidance in Bangalore",
+      "description": "Para-Medical Course Blogs Admission Guidance in Bnagalore",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug",
+        "url": "https://www.thephotogenicbug.in/"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-23",
+      "dateModified": "2021-08-23"
+    }
+    </script>
+  <meta name="description" content="Para-Medical Course Blogs Admission Guidance in Bnagalore">
+  <meta name="keywords" content=" 
+   admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, admission, admissions, counselling, counseling, bangalore counseling, abroad admission consultants, abroad education consultants, academic career coach,academic consultant in bangalore, admission, admission assistance , admission consultancy in bangalore, admission consultant, admission consultant in bangalore, admission consultant near me, admission guidance, admission guidance in bangalore, admission through management quota, admission through nri quota, bangalore university, best admission consultant in bangalore, best career guidance, best college admission consultant in bangalore, best colleges in bangalore, best education consultancy in bangalore, career counselling , career guidance, college, college admission, college admission assistance, college admission consultant in bangalore, college admission counselore near me, college admission guidance, college admission in bangalore, college admission information, college admission process, college admissions advice, college admissionsconsultant, college admissions counselor, college advisor, college consultant, college counselor, collegeplanning consultant, colleges in bangalore, direct admission, direct admission consultants, education, education admission guidance, education counsellor, educational consultants in bangalore, educationalguidance, foreign studies consultants, genuine admission consultant, international admissions, international education consultancy, international student admission, international university admission, mba admission assistance, nursing admission, overseas education consultant, overseas education consultants, overseas education consultants near me, para-medical colleges in bangalore, puc admission, school admission, school admission assistance, student consultants, study abroad consultant,study abroad consultants in bangalore, university admission, bachelor of commerce, bachelor of commerce degree, bachelor of commerce subjects, bachelor of commerce jobs, bachelor of commerce short form, bachelor of commerce accounting and finance, bachelor of commerce meaning, bachelor of commerce in accounting and finance, bachelor of commerce canada, bachelor of commerce australia, bachelor of commerce accounting, bachelor of commerce courses, bachelor of commerce in india, bachelor of commerce result 2019
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Para-Medical Course Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/para-medical-course-blogs.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Para-Medical Course Blogs Admission Guidance in Bnagalore" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Para-Medical Course Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Para-Medical Course Blogs Admission Guidance in Bnagalore" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
@@ -29,12 +80,14 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
     <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
+
 
   <div class="banner">
 
@@ -46,7 +99,6 @@
       </div>
     </div>
   </div>
-
   
 
   <div class="container mt-2">
